--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,34 +20,19 @@ jobs:
         uses: actions/cache@v3
         with:
           path: pico-sdk
-          key: ${{ runner.os }}-pico-sdk-${{ hashFiles('**/pico-sdk') }}
+          key: ${{ runner.os }}-pico-sdk
           restore-keys: |
-            ${{ runner.os }}-pico-sdk-
+            ${{ runner.os }}-pico-sdk
 
       - name: Set up Pico SDK
-        if: steps.cache.outputs.cache-hit != 'true'
         run: |
-          git clone -b master https://github.com/raspberrypi/pico-sdk.git
-          cd pico-sdk
-          git submodule update --init
+          if [ ! -d pico-sdk ]; then
+            git clone -b master https://github.com/raspberrypi/pico-sdk.git
+            cd pico-sdk
+            git submodule update --init
+          fi
         env:
           PICO_SDK_PATH: ${{ github.workspace }}/pico-sdk
-
-      - name: Cache apt packages
-        uses: actions/cache@v3
-        with:
-          path: /var/cache/apt
-          key: ${{ runner.os }}-apt-${{ hashFiles('**/ci.yml') }}
-          restore-keys: |
-            ${{ runner.os }}-apt-
-
-      - name: Cache apt lists
-        uses: actions/cache@v3
-        with:
-          path: /var/lib/apt/lists
-          key: ${{ runner.os }}-apt-lists-${{ hashFiles('**/ci.yml') }}
-          restore-keys: |
-            ${{ runner.os }}-apt-lists-
 
       - name: Setup dependencies
         run: |
@@ -56,7 +41,7 @@ jobs:
 
       - name: Build project
         run: |
-          mkdir build
+          mkdir -p build
           cd build
           cmake .. -DPICO_SDK_PATH=${{ github.workspace }}/pico-sdk
           make
